Re-design comment threads (#1489)
* Redesign threadline and fetching state

- threadline goes right below channel avatar, mimicking reddits implementation, has a increase effect on hover and is slimmer, creating more space for comments on screen
- fetching state now replaces show/hide button, also mimicking reddit, and now says that it is loading, instead of a blank spinner, and also improves space a bit

* Redesign comment threads

- Allow for infinite comment chains
- Can go back and forth between the pages
- Can go back to all comments or to the first comment in the chain
- Some other improvements, which include:
- add title on non-drawer comment sections (couldn't see amount of comments)
- fix Expandable component (would begin expanded and collapse after the effect runs, which looked bad and shifted the layout, now each comments greater than the set length begins collapsed)
- used constants for consistency

* Fix replying to last thread comment

* Fix buttons condition (only on fetched comment to avoid deleted case)

* Fix auto-scroll

* Bring back instant feedback for Show More replies

* Improve thread back links

- Now going back to all comments links the top-level comment for easier navigation
- Going back to ~ previous ~ now goes back into the chain instead of topmost level

* Clear timeouts due to unrelated issue

* Fix deep thread linked comment case and more scroll improvements

* More minor changes

* Flow

* Fix commentList tile style

* Fix long channel names overflowing on small screens

* More scroll changes

* Fix threadline

* Revert "Fix long channel names overflowing on small screens"

This reverts commit e4d2dc7da5861ed8136a60f3352e41a690cd4d33.

* Fix replies fetch

* Revert "Fix replies fetch"

This reverts commit ec70054675a604a7a5f3764ba07c36bf7b0f49c8.

* Cleanup and make smooth

* Always use linked comment on threads

* Cleanup

* Higlight thread comment

* Fix comment body sty

--- a/ui/scss/component/_card.scss
+++ b/ui/scss/component/_card.scss
@@ -19,29 +19,29 @@
     .card__main-actions {
       margin-top: 0px !important;
 
-      .comment__sort {
-        margin: 0px !important;
-        display: inline;
-
-        button {
-          padding: var(--spacing-xxs);
-
-          span {
-            font-size: var(--font-xxsmall);
-          }
-        }
-      }
-
-      > .button--alt {
-        padding: var(--spacing-xxs) var(--spacing-s);
-      }
-
       .comment__sort + button {
         margin: 0px var(--spacing-xxs);
       }
 
       .button + .commentCreate {
         margin-top: var(--spacing-xxs);
+      }
+    }
+
+    .comment__sort {
+      margin: 0px !important;
+      display: inline;
+
+      + .button--alt {
+        padding: var(--spacing-xxs) var(--spacing-s);
+      }
+
+      button {
+        padding: var(--spacing-xxs);
+
+        span {
+          font-size: var(--font-xxsmall);
+        }
       }
     }
   }
@@ -279,17 +279,20 @@
 }
 
 .card--enable-overflow {
-  .card__header--between {
-    @media (max-width: $breakpoint-small) {
+  @media (max-width: $breakpoint-small) {
+    .card__header--between {
       margin-bottom: 0;
+
       .card__title-section {
-        width: 60%;
+        margin: var(--spacing-s) 0px;
+
+        h2 {
+          font-size: var(--font-body);
+        }
       }
     }
-  }
 
-  .card__title-actions-container {
-    @media (max-width: $breakpoint-small) {
+    .card__title-actions-container {
       flex-grow: 1;
       min-height: 47px;
 
