--- a/ui/scss/component/_textarea-suggestions.scss
+++ b/ui/scss/component/_textarea-suggestions.scss
@@ -270,18 +270,16 @@
     }
   }
 
-  .card__main-actions {
-    .button--alt:last-of-type {
-      top: -1px;
-      float: right;
-      margin-right: 0;
-    }
-    .comment__sort {
-      .button--alt:last-of-type {
-        top: unset;
-        float: unset;
-        margin-right: unset;
-      }
+  .button--alt[aria-label='Refresh'] {
+    top: -1px;
+    float: right;
+    margin-right: 0;
+  }
+  .comment__sort {
+    .button--alt[aria-label='Refresh'] {
+      top: unset;
+      float: unset;
+      margin-right: unset;
     }
   }
 
