--- a/ui/scss/component/_main.scss
+++ b/ui/scss/component/_main.scss
@@ -238,18 +238,16 @@ body {
       .card {
         padding: 0;
         .card__first-pane {
-          .card__main-actions {
-            .button--alt:last-of-type {
-              top: -1px;
-              float: right;
-              margin-right: 0;
-            }
-            .comment__sort {
-              .button--alt:last-of-type {
-                top: unset;
-                float: unset;
-                margin-right: unset;
-              }
+          .button--alt[aria-label='Refresh'] {
+            top: -1px;
+            float: right;
+            margin-right: 0;
+          }
+          .comment__sort {
+            .button--alt[aria-label='Refresh'] {
+              top: unset;
+              float: unset;
+              margin-right: unset;
             }
           }
         }
