--- a/ui/scss/component/_media.scss
+++ b/ui/scss/component/_media.scss
@@ -10,7 +10,7 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  box-shadow: 0px 0px 0px 1px rgba(var(--color-primary-dynamic), 0.1) inset;
+  box-shadow: 0 0 0 1px rgba(var(--color-primary-dynamic), 0.1) inset;
 }
 
 //  M E D I A
