--- a/ui/scss/init/_mixins.scss
+++ b/ui/scss/init/_mixins.scss
@@ -188,6 +188,10 @@
   border-width: 0;
 }
 
+.pulse {
+  animation: pulse 2s infinite ease-in-out;
+}
+
 @mixin mediaThumbHoverZoom {
   .media__thumb,
   img {
