--- a/ui/scss/component/_videojs.scss
+++ b/ui/scss/component/_videojs.scss
@@ -36,11 +36,24 @@ $control-bar-icon-size: 0.8rem;
   // Progress Bar
   .vjs-progress-control.vjs-control {
     position: absolute;
-    display: flex;
+    display: block;
     align-items: center;
     width: 100%;
     height: 1rem;
     bottom: 90%;
+    margin: 1px 23px !important;
+    max-width: 96.5%;
+
+    @media (max-width: $breakpoint-small) {
+      max-width: 94.5%;
+    }
+
+    .vjs-vtt-thumbnail-display {
+      margin-top: -122px;
+      border: 1px solid white;
+      background-color: black !important;
+      visibility: hidden;
+    }
 
     // Circle play head
     .vjs-play-progress::before {
@@ -48,16 +61,24 @@ $control-bar-icon-size: 0.8rem;
       transition: transform 0.1s;
     }
 
+    .vjs-progress-holder {
+      margin: 0;
+    }
+
     &:hover {
       .vjs-play-progress::before {
         transform: scale(1);
       }
+      .vjs-progress-holder {
+        margin-top: -0.1em !important;
+        height: 0.4em !important;
+      }
     }
 
     // Progress Slider
-    .vjs-slider {
-      margin: 0 1rem;
-    }
+    //.vjs-slider {
+    //  margin: 0 1rem;
+    //}
   }
 
   // Load progress color
@@ -114,6 +135,8 @@ $control-bar-icon-size: 0.8rem;
 .vjs-mouse-display .vjs-time-tooltip {
   color: white;
   white-space: nowrap;
+  top: -32px;
+  padding-top: 9px;
 }
 
 // Tooltip
