Allow chat to be resized (#1517)
* Allow drawer to be resized

- Basically re-writes the drag behavior into the Drawer component instead of using SwipeableDrawer, getting more flexibility of where to stop and what to do
- More improvements like the backdrop effect, animations and window resize behavior

* Fix console errors

* Close drawer on unmount so other pages dont load open

* Allow livestream chat to be resized horizontally

* Fix mobile browser size

- address bar etc could be on the way

* Handle popout chat

* Fix pause with floating player

--- a/ui/scss/component/_livestream-chat.scss
+++ b/ui/scss/component/_livestream-chat.scss
@@ -28,6 +28,9 @@ $recent-msg-button__height: 2rem;
   @media (min-width: $breakpoint-small) {
     top: calc(var(--header-height) + var(--spacing-m)) !important;
     position: sticky;
+    resize: horizontal;
+    overflow: hidden;
+    max-width: 30vw;
   }
 
   @media (min-width: $breakpoint-medium) {
@@ -154,6 +157,8 @@ $recent-msg-button__height: 2rem;
   height: 100vh !important;
   top: 0 !important;
   overflow: hidden;
+  resize: none;
+  max-width: unset;
 
   .livestreamComments__wrapper {
     height: 95vh !important;
@@ -488,7 +493,6 @@ $recent-msg-button__height: 2rem;
 
   @media (min-width: $breakpoint-small) {
     padding: var(--spacing-xs);
-    width: var(--livestream-comments-width);
   }
 }
 
@@ -578,7 +582,6 @@ $recent-msg-button__height: 2rem;
 
   @media (min-width: $breakpoint-small) {
     padding: var(--spacing-xs);
-    width: var(--livestream-comments-width);
   }
 }
 
