--- a/ui/scss/component/_livestream-chat.scss
+++ b/ui/scss/component/_livestream-chat.scss
@@ -25,12 +25,29 @@ $recent-msg-button__height: 2rem;
     }
   }
 
-  @media (min-width: $breakpoint-small) {
-    top: calc(var(--header-height) + var(--spacing-m)) !important;
-    position: sticky;
+  @media (min-width: 1900px) {
     resize: horizontal;
     overflow: hidden;
     max-width: 30vw;
+
+    &::after {
+      pointer-events: none;
+      content: '< >';
+      font-size: 1rem;
+      position: absolute;
+      height: 1.2rem;
+      width: 2rem;
+      text-align: center;
+      bottom: 1px;
+      right: 1px;
+      background-color: var(--color-header-button);
+      color: var(--color-text);
+    }
+  }
+
+  @media (min-width: $breakpoint-small) {
+    top: calc(var(--header-height) + var(--spacing-m)) !important;
+    position: sticky;
   }
 
   @media (min-width: $breakpoint-medium) {
