--- a/ui/scss/component/_claim-list.scss
+++ b/ui/scss/component/_claim-list.scss
@@ -450,7 +450,7 @@
 .claim-preview--premium-plus {
   .media__thumb {
     background-color: #283263;
-    background-image: url('https://odysee.com/public/img/astronaut_n_friends.png');
+    background-image: url('../../ui/component/membershipSplash/astronaut_n_friends.png'); // TODO fix relative path for all url('')
     background-size: 100%;
   }
 
