Remove relative paths in sass (#1540)

--- a/ui/scss/init/_gui.scss
+++ b/ui/scss/init/_gui.scss
@@ -297,7 +297,7 @@ img {
   margin: -1rem 0;
   padding: 0 30px;
 
-  background: url('../../static/img/busy.gif') no-repeat center center;
+  background: url('~static/img/busy.gif') no-repeat center center;
   display: inline-block;
   vertical-align: middle;
 
