fix disappearing checkbox on hover

--- a/ui/scss/themes/dark.scss
+++ b/ui/scss/themes/dark.scss
@@ -102,7 +102,7 @@
   --color-input-placeholder: #f4f4f5;
   --color-input-bg: var(--color-header-background);
   --color-input-bg-selected: var(--color-primary);
-  --color-input-toggle-bg-hover: rgba(var(--color-primary-dynamic), 0.03);
+  --color-input-toggle-bg-hover: var(--color-gray-8);
   --color-input-prefix-bg: var(--color-primary);
 
   // Navigation
