--- a/ui/scss/component/_collection.scss
+++ b/ui/scss/component/_collection.scss
@@ -78,6 +78,11 @@
   }
   margin-bottom: var(--spacing-xs);
   margin-left: var(--spacing-xxs);
+  label {
+    &::before {
+      border: 1px solid var(--color-input-border);
+    }
+  }
 }
 
 .icon-collection-select {
