fix status bar colors

--- a/ui/scss/component/_status-bar.scss
+++ b/ui/scss/component/_status-bar.scss
@@ -1,6 +1,6 @@
 .status-bar {
-  background-color: var(--color-card-background);
-  color: #e0e0e0;
+  background-color: var(--color-gray-3);
+  color: var(--color-gray-9);
   position: fixed;
   left: 0;
   bottom: 0;
