Fix ob-widget position

--- a/ui/scss/component/_ads.scss
+++ b/ui/scss/component/_ads.scss
@@ -319,6 +319,7 @@
   height: 27px !important;
 }
 
+/*
 .ob-widget-footer {
   position: absolute !important;
   right: 32px;
@@ -339,6 +340,7 @@
     display: none !important;
   }
 }
+*/
 
 .ob-widget-items-container {
   padding-left: var(--spacing-xs);
