Ad: fix stray video floaters outside our container.
This was tested to be removed during evaluation, but seems like there are cases where it comes back.

This solution should be more robust: hide for all, except when in our designated container.

--- a/ui/scss/component/_ads.scss
+++ b/ui/scss/component/_ads.scss
@@ -15,6 +15,12 @@
   }
 }
 
+.avp-p-wrapper {
+  // Hide by default, so that any stray floater won't be visible.
+  // We'll enable it only within our designated container.
+  display: none;
+}
+
 // Inline Video Ads
 // The default is coded for list-layout;
 // --tile and other modifiers adjust accordingly.
@@ -59,6 +65,11 @@
     @media (min-width: $breakpoint-large) {
       $width: calc(var(--file-list-thumbnail-width) * 1.2);
       width: $width;
+    }
+
+    .avp-p-wrapper {
+      // Only enable this within our container.
+      display: block;
     }
 
     div[style*='transform-origin: left bottom'],
