--- a/ui/scss/component/_content.scss
+++ b/ui/scss/component/_content.scss
@@ -171,13 +171,17 @@
       }
     }
 
-    .vjs-progress-control {
-      top: 32px;
-      .vjs-slider {
-        margin: 0 !important;
-        div,
-        span {
-          height: 2px !important;
+    .video-js {
+      .vjs-progress-control.vjs-control {
+        top: 38px;
+        margin: unset !important;
+        max-width: 100%;
+        .vjs-slider {
+          margin: 0 !important;
+          div,
+          span {
+            height: 2px !important;
+          }
         }
       }
     }
