--- a/ui/scss/init/_gui.scss
+++ b/ui/scss/init/_gui.scss
@@ -722,7 +722,7 @@ img {
   }
 }
 
-.uploadPage-wraper {
+.uploadPage-wrapper {
   &.card-stack {
     .card:not(:last-of-type) {
       margin-bottom: var(--spacing-l) !important;
